src/objects/VisitFrequencyPlanning__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>VisitFrequencyPlannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <formula>PlannedVisits__c  -  ExecutedVisits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecutedVisits__c</fullName>
        <label>ExecutedVisits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PlannedVisits__c</fullName>
        <label>PlannedVisits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimePeriodEnd__c</fullName>
        <label>TimePeriodEnd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimePeriodStart__c</fullName>
        <label>TimePeriodStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>VisitFrequencyPlanning</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VisitFrequencyPlanning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VisitFrequencyPlannings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>